# sgsound

./: .clang-format  CMakeLists.txt  Makefile  README.md  test.sg
include/sgsound/: openal.h  openalBgm.h  openalMemoryStream.h  openalSfx.h  openalStream.h
src/: openal.c  openalBgm.c  openalMemoryStream.c  openalSfx.c  openalStream.c
test/: main.c
